--- a/socialmedia/templates/base.html
+++ b/socialmedia/templates/base.html
@@ -1,4 +1,4 @@
-{% load static i18n %}
+{% load cms_tags sekizai_tags static i18n menu_tags %}
 
 <!DOCTYPE html>
 {% get_current_language as LANGUAGE_CODE %}
@@ -11,6 +11,7 @@
         social-network
       {% endblock title %}
     </title>
+    {% render_block "css" %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="distributed social media app" />
     <meta name="author" content="erik" />
@@ -42,6 +43,8 @@
     {% endblock javascript %}
   </head>
   <body class="{% block bodyclass %}{% endblock bodyclass %}">
+    {% cms_toolbar %}
+    {% render_block "js" %}
     {% block body %}
       <div class="mb-1">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -90,6 +93,9 @@
           </div>
         </nav>
       </div>
+      <ul class="nav">
+        {% show_menu 0 100 100 100 %}
+      </ul>
       <div class="container">
         {% if messages %}
           {% for message in messages %}
