--- a/socialmedia/templates/pages/home.html
+++ b/socialmedia/templates/pages/home.html
@@ -13,27 +13,80 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous" />
+    <!-- Custom CSS -->
+    <style>
+      body {
+        background-color: #f0f2f5;
+      }
+
+      .navbar {
+        background-color: #fff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+
+      .sidebar {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-top: 20px;
+      }
+
+      .content {
+        margin-top: 20px;
+      }
+
+      .post {
+        background-color: #fff;
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+      }
+    </style>
     <title>{% placeholder "title" %}</title>
   </head>
   <body>
     {% cms_toolbar %}
     {% render_block "js" %}
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <ul class="nav">
-          <li class="breadcrumb-item">
-            <a href="#">{% show_menu %}</a>
-          </li>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">SocialMediaApp</a>
+      <button class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          {% show_menu 0 1 100 100 %}
         </ul>
-      </ol>
+      </div>
     </nav>
-    {% block content %}
-      <h1>{% placeholder "title" %}</h1>
-      {% placeholder "home" %}
-      {% placeholder "sidebar" %}
-    {% endblock content %}
+    <!-- Main Content Area -->
+    <div class="container">
+      <div class="row">
+        <!-- Sidebar -->
+        <div class="col-md-3 sidebar">
+          <h4>Sidebar</h4>
+          {% placeholder "sidebar" %}
+        </div>
+        <!-- Content Area -->
+        <div class="col-md-9 content">
+          {% block content %}
+            <div class="post">
+              <h1>{% placeholder "title" %}</h1>
+              {% placeholder "home" %}
+            </div>
+          {% endblock content %}
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
