--- a/socialmedia/templates/pages/home.html
+++ b/socialmedia/templates/pages/home.html
@@ -21,28 +21,21 @@
     {% cms_toolbar %}
     {% render_block "js" %}
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-light navbar-custom">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">SocialMediaApp</a>
       <button class="navbar-toggler"
               type="button"
               data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
+              data-target="#navbarNav"
+              aria-controls="navbarNav"
               aria-expanded="false"
               aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-          {% show_menu 0 1 100 100 %}
+          {% show_menu 0 100 100 100 "menu/custom_menu.html" %}
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2"
-                 type="search"
-                 placeholder="Search"
-                 aria-label="Search" />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
     </nav>
     <!-- Main Content Area -->
@@ -72,5 +65,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function() {
+        $('.dropdown-toggle-icon').click(function(event) {
+          event.preventDefault();
+          $(this).parent().next('.dropdown-menu').toggle();
+        });
+      });
+    </script>
   </body>
 </html>
