--- a/socialmedia/templates/pages/home.html
+++ b/socialmedia/templates/pages/home.html
@@ -15,7 +15,7 @@
           crossorigin="anonymous" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <title>{% placeholder "title" %}</title>
+    <title>Social Media</title>
   </head>
   <body>
     {% cms_toolbar %}
