--- a/socialmedia/templates/pages/home.html
+++ b/socialmedia/templates/pages/home.html
@@ -13,6 +13,11 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous" />
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+          crossorigin="anonymous" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <title>Social Media</title>
@@ -39,22 +44,51 @@
       </div>
     </nav>
     <!-- Main Content Area -->
-    <div class="container main-container">
-      <!-- Sidebar -->
-      <div class="sidebar">
-        <h4>Sidebar</h4>
-        {% placeholder "sidebar" %}
-      </div>
-      <!-- Content Area -->
-      <div class="content">
-        {% block content %}
-          <div class="post">
-            <h1>{% placeholder "title" %}</h1>
-            {% placeholder "home" %}
-          </div>
-        {% endblock content %}
+    <div class="container main-container d-flex flex-column min-vh-100">
+      <div class="row flex-grow-1">
+        <!-- Sidebar -->
+        <div class="col-md-3 sidebar">
+          <h4>Sidebar</h4>
+          {% placeholder "sidebar" %}
+        </div>
+        <!-- Content Area -->
+        <div class="col-md-9 content">
+          {% block content %}
+            <div class="post">
+              <h1>{% placeholder "title" %}</h1>
+              {% placeholder "home" %}
+            </div>
+          {% endblock content %}
+        </div>
       </div>
     </div>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start custom-footer">
+      <div class="container d-flex justify-content-center py-5">
+        <button type="button"
+                class="btn btn-primary btn-lg btn-floating mx-2 custom-button">
+          <i class="fab fa-facebook-f"></i>
+        </button>
+        <button type="button"
+                class="btn btn-primary btn-lg btn-floating mx-2 custom-button">
+          <i class="fab fa-youtube"></i>
+        </button>
+        <button type="button"
+                class="btn btn-primary btn-lg btn-floating mx-2 custom-button">
+          <i class="fab fa-instagram"></i>
+        </button>
+        <button type="button"
+                class="btn btn-primary btn-lg btn-floating mx-2 custom-button">
+          <i class="fab fa-twitter"></i>
+        </button>
+      </div>
+      <!-- Copyright -->
+      <div class="text-center text-white p-3 custom-copyright">
+        © 2020 Copyright:
+        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      </div>
+    </footer>
+    <!-- Footer -->
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
