--- a/socialmedia/templates/pages/home.html
+++ b/socialmedia/templates/pages/home.html
@@ -26,7 +26,7 @@
     {% cms_toolbar %}
     {% render_block "js" %}
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light custom-navbar">
       <a class="navbar-brand" href="#">SocialMediaApp</a>
       <button class="navbar-toggler"
               type="button"
