--- a/socialmedia/templates/menu/custom_menu.html
+++ b/socialmedia/templates/menu/custom_menu.html
@@ -4,7 +4,7 @@
   <li class="nav-item dropdown mr-3 {% if child.selected %}active{% endif %}">
     <a class="nav-link" href="{{ child.get_absolute_url }}">
       {{ child.get_menu_title }}
-      {% if child.get_menu_title == "Page1" %}
+      {% if child.get_menu_title == "Home" %}
         <span class="dropdown-toggle-icon"
               data-toggle="dropdown"
               aria-haspopup="true"
@@ -16,13 +16,13 @@
       <a class="dropdown-item" href="#">Another action</a>
       <a class="dropdown-item" href="#">Something else here</a>
     </div>
-    {% if child.get_menu_title == "Page1" and child.children %}
+    {% if child.get_menu_title == "Home" and child.children %}
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         {% for grandchild in child.children %}
           <a class="dropdown-item" href="{{ grandchild.get_absolute_url }}">{{ grandchild.get_menu_title }}</a>
         {% endfor %}
-        <a class="dropdown-item" href="{% url 'users:page1' %}">Page1</a>
-        <a class="dropdown-item" href="{% url 'users:page2' %}">Page2</a>
+        <a class="dropdown-item" href="{% url 'users:home' %}">Home</a>
+        <a class="dropdown-item" href="{% url 'users:about' %}">About</a>
       </div>
     {% endif %}
   </li>
