--- a/socialmedia/templates/pages/about.html
+++ b/socialmedia/templates/pages/about.html
@@ -1,1 +1,193 @@
-{% extends "base.html" %}
+{% load static i18n cms_tags sekizai_tags menu_tags %}
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% render_block "css" %}
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous" />
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+          crossorigin="anonymous" />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <title>About Us - SocialMediaApp</title>
+  </head>
+  <body>
+    {% cms_toolbar %}
+    {% render_block "js" %}
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light custom-navbar">
+      <a class="navbar-brand" href="{% url 'home' %}">SocialMediaApp</a>
+      <button class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+          {% show_menu 0 100 100 100 "menu/custom_menu.html" %}
+        </ul>
+      </div>
+    </nav>
+    <!-- Main Content Area -->
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h1 class="display-4">About SocialMediaApp</h1>
+          <p class="lead">Connecting People. Building Communities.</p>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-lg-6">
+          <h2>Our Mission</h2>
+          <p>
+            Our mission is to give people the power to build community and bring the world closer together. People use our app to stay connected with friends and family, to discover what's going on in the world, and to share and express what matters to them.
+          </p>
+        </div>
+        <div class="col-lg-6">
+          <img src="{% static 'images/mission.jpg' %}"
+               class="img-fluid"
+               alt="Our Mission" />
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-lg-6">
+          <img src="{% static 'images/values.jpg' %}"
+               class="img-fluid"
+               alt="Our Values" />
+        </div>
+        <div class="col-lg-6">
+          <h2>Our Values</h2>
+          <p>
+            We are constantly iterating, solving problems and working together to connect people all over the world. That’s why it’s important that our workforce reflects the diversity of the people we serve. By bringing together people from different backgrounds, perspectives, and experiences, we can help people build stronger communities.
+          </p>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-lg-6">
+          <h2>Our Impact</h2>
+          <p>
+            We are committed to creating positive impact in the communities we serve. From providing tools for social impact to supporting local businesses, we strive to make a difference in the world.
+          </p>
+        </div>
+        <div class="col-lg-6">
+          <img src="{% static 'images/impact.jpg' %}"
+               class="img-fluid"
+               alt="Our Impact" />
+        </div>
+      </div>
+    </div>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start bg-light text-muted mt-auto">
+      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <div class="me-5 d-none d-lg-block">
+          <span>Get connected with us on social networks:</span>
+        </div>
+        <div>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-google"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+      </section>
+      <section>
+        <div class="container text-center text-md-start mt-5">
+          <div class="row mt-3">
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">SocialMediaApp</h6>
+              <p>
+                Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">Company</h6>
+              <p>
+                <a href="#!" class="text-reset">How it works</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Pricing</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Docs</a>
+              </p>
+            </div>
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">Resources</h6>
+              <p>
+                <a href="#!" class="text-reset">Blog post name list goes here</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Blog post name list goes here</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Blog post name list goes here</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">See all resources ></a>
+              </p>
+            </div>
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">About</h6>
+              <p>
+                <a href="#!" class="text-reset">Terms & Conditions</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Privacy policy</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="text-center p-4 footer-bg">
+        © 2020 Copyright:
+        <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      </div>
+    </footer>
+    <!-- Optional JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function() {
+        $('.dropdown-toggle-icon').click(function(event) {
+          event.preventDefault();
+          $(this).parent().next('.dropdown-menu').toggle();
+        });
+      });
+    </script>
+  </body>
+</html>
