--- a/socialmedia/static/css/styles.css
+++ b/socialmedia/static/css/styles.css
@@ -34,6 +34,46 @@ html, body {
   background-color: #004085 !important;
 }
 
+.navbar .dropdown-toggle {
+  padding-right: 0;
+}
+
+.navbar .dropdown-toggle-icon {
+  margin-left: 5px;
+}
+
+/* Profile Image Styles */
+.profile-img {
+  width: 30px;
+}
+
+.profile-img-large {
+  width: 100px;
+}
+
+.post-img {
+  width: 80px;
+}
+
+.follow-img {
+  width: 50px;
+}
+
+/* Align search input and upload button */
+.navbar .form-inline {
+  display: flex;
+  align-items: center;
+}
+
+.navbar .form-inline .form-control {
+  margin-right: 10px;
+}
+
+.navbar .form-inline .btn {
+  height: calc(1.5em + 0.75rem + 2px);
+  line-height: 1.5;
+}
+
 /* Sidebar Styles */
 .sidebar {
   background-color: #fff;
@@ -156,4 +196,53 @@ footer {
 
 .user-image {
   max-width: 200px;
+}
+
+/* Profile Content Styles */
+.profile-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-content .details {
+  text-align: center;
+}
+
+.profile-content .details h4 {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.profile-content .details p {
+  margin-bottom: 10px;
+}
+
+.profile-content .details button {
+  margin-top: 10px;
+}
+
+.sidebar h3 {
+  margin-bottom: 20px;
+}
+
+.follow-suggestions li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.follow-suggestions li img {
+  border-radius: 50%;
+  width: 50px;
+  margin-right: 10px;
+}
+
+.footer-bg {
+  background-color: #f8f9fa;
 }
