--- a/socialmedia/templates/menu/custom_menu.html
+++ b/socialmedia/templates/menu/custom_menu.html
@@ -11,18 +11,13 @@
               aria-expanded="false">▼</span>
       {% endif %}
     </a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-    </div>
-    {% if child.get_menu_title == "Home" and child.children %}
+    {% if child.get_menu_title == "Home" %}
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        {% for grandchild in child.children %}
-          <a class="dropdown-item" href="{{ grandchild.get_absolute_url }}">{{ grandchild.get_menu_title }}</a>
-        {% endfor %}
-        <a class="dropdown-item" href="{% url 'home' %}">Home</a>
-        <a class="dropdown-item" href="{% url 'about' %}">About</a>
+        {% if request.user.is_authenticated %}
+          <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+        {% else %}
+          <a class="dropdown-item disabled" href="#">Profile (Login Required)</a>
+        {% endif %}
       </div>
     {% endif %}
   </li>
