--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -20,7 +20,7 @@
           crossorigin="anonymous" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <title>Social Media</title>
+    <title>User Profile - Social Media App</title>
   </head>
   <body>
     {% cms_toolbar %}
@@ -41,29 +41,135 @@
         <ul class="navbar-nav mr-auto">
           {% show_menu 0 100 100 100 "menu/custom_menu.html" %}
         </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2"
+                 type="search"
+                 placeholder="Search for username..."
+                 aria-label="Search" />
+        </form>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <button class="btn btn-primary my-2 my-sm-0" type="button">Upload Pics / Videos</button>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fas fa-bell"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fas fa-comments"></i></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle"
+               href="#"
+               id="navbarDropdown"
+               role="button"
+               data-toggle="dropdown"
+               aria-haspopup="true"
+               aria-expanded="false">
+              <img src="{% static 'images/profile-placeholder.png' %}"
+                   alt="Profile"
+                   class="rounded-circle profile-img" />
+            </a>
+            <div class="dropdown-menu dropdown-menu-right"
+                 aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Profile</a>
+              <a class="dropdown-item" href="#">Settings</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Logout</a>
+            </div>
+          </li>
+        </ul>
       </div>
     </nav>
-    <!-- Main Content Area -->
-    <div class="container text-center my-5">
+    <!-- Profile Content -->
+    <div class="container my-5">
       <div class="row">
-        <div class="col-lg-12">
-          <h1 class="display-4">Welcome to our App</h1>
-          <p class="lead">
-            Our app allows people to create, share or exchange information, ideas, and pictures/videos in virtual communities and networks.
-          </p>
-          <a href="{% url 'account_signup' %}" class="btn btn-primary btn-lg">Get Started</a>
+        <div class="col-lg-8">
+          <div class="profile-content bg-white p-4 rounded shadow-sm">
+            <div class="post mb-4">
+              <img src="{% static 'images/profile-placeholder.png' %}"
+                   alt="Profile Picture"
+                   class="img-fluid rounded-circle profile-img-large" />
+              <div class="details">
+                <h4>Tomi_ml</h4>
+                <p>320k Followers</p>
+                <button class="btn btn-primary mt-3">Follow</button>
+              </div>
+            </div>
+            <!-- Add more posts here -->
+            <div class="post mt-4 p-3 bg-light rounded">
+              <div class="d-flex">
+                <img src="{% static 'images/sample-post.jpg' %}"
+                     alt="Post Image"
+                     class="img-fluid mr-3 post-img" />
+                <div class="details">
+                  <p>
+                    <strong>Tomi_ml</strong> This is a sample post description. #sample #post
+                  </p>
+                  <div>
+                    <button class="btn btn-light">
+                      <i class="far fa-thumbs-up"></i> Like
+                    </button>
+                    <button class="btn btn-light">
+                      <i class="far fa-comment"></i> Comment
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="post mt-4 p-3 bg-light rounded">
+              <div class="d-flex">
+                <img src="{% static 'images/sample-post.jpg' %}"
+                     alt="Post Image"
+                     class="img-fluid mr-3 post-img" />
+                <div class="details">
+                  <p>
+                    <strong>Tomi_ml</strong> Another post description. #another #post
+                  </p>
+                  <div>
+                    <button class="btn btn-light">
+                      <i class="far fa-thumbs-up"></i> Like
+                    </button>
+                    <button class="btn btn-light">
+                      <i class="far fa-comment"></i> Comment
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-lg-12">
-          <img src="{% static 'images/profile-placeholder.png' %}"
-               alt="User"
-               class="img-fluid user-image" />
+        <div class="col-lg-4">
+          <div class="sidebar bg-white p-4 rounded shadow-sm">
+            <h3>Users You Can Follow</h3>
+            <ul class="list-unstyled follow-suggestions">
+              <li class="d-flex align-items-center mb-3">
+                <img src="{% static 'images/user1.jpg' %}"
+                     alt="User 1"
+                     class="rounded-circle follow-img" />
+                <span>Taiye</span>
+                <button class="btn btn-primary ml-auto">Follow</button>
+              </li>
+              <li class="d-flex align-items-center mb-3">
+                <img src="{% static 'images/user2.jpg' %}"
+                     alt="User 2"
+                     class="rounded-circle follow-img" />
+                <span>Kayode</span>
+                <button class="btn btn-primary ml-auto">Follow</button>
+              </li>
+              <li class="d-flex align-items-center mb-3">
+                <img src="{% static 'images/user3.jpg' %}"
+                     alt="User 3"
+                     class="rounded-circle follow-img" />
+                <span>Faith_do</span>
+                <button class="btn btn-primary ml-auto">Follow</button>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-light text-muted">
+    <footer class="text-center text-lg-start bg-light text-muted mt-auto">
       <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
