--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -20,7 +20,7 @@
           crossorigin="anonymous" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <title>User Profile - Social Media App</title>
+    <title>Post Detail - Social Media App</title>
   </head>
   <body>
     {% cms_toolbar %}
@@ -80,68 +80,42 @@
         </ul>
       </div>
     </nav>
-    <!-- Profile Content -->
+    <!-- Post Detail Content -->
     <div class="container my-5">
       <div class="row">
         <div class="col-lg-8">
-          <div class="profile-content bg-white p-4 rounded shadow-sm">
+          <div class="post-content bg-white p-4 rounded shadow-sm">
             <div class="post mb-4">
-              <img src="{% static 'images/profile-placeholder.png' %}"
-                   alt="Profile Picture"
-                   class="img-fluid rounded-circle profile-img-large" />
-              <div class="details">
-                <h4>Erik</h4>
-                <p>320k Followers</p>
-                <button class="btn btn-primary mt-3">Follow</button>
+              {% if post_detail.image %}<img src="{{ post_detail.image.url }}" alt="Post Image" class="img-fluid" />{% endif %}
+              <div class="details mt-3">
+                <h4>{{ post_detail.user.username }}</h4>
+                <p>{{ post_detail.text }}</p>
+                <button class="btn btn-light">
+                  <i class="far fa-thumbs-up"></i> Like
+                </button>
+                <button class="btn btn-light">
+                  <i class="far fa-comment"></i> Comment
+                </button>
               </div>
             </div>
-            <!-- Displaying user's posts -->
-            {% for post in latest_post_list %}
-              <div class="post mt-4 p-3 bg-light rounded">
-                <div class="d-flex">
-                  {% if post.image %}
-                    <a href="{% url 'social:detail' post.id %}">
-                      <img src="{{ post.image.url }}"
-                           alt="Post Image"
-                           class="img-fluid mr-3 post-img" />
-                    </a>
-                  {% endif %}
-                  <div class="details">
-                    <p>
-                      <a href="{% url 'social:detail' post.id %}">
-                        <strong>{{ post.user.username }}</strong> {{ post.text }}
-                      </a>
+            <div class="comments mt-2">
+              {% for comment in post_detail.comments.all %}
+                <div class="comment mb-2 d-flex">
+                  <img src="{{ comment.user.profile.profile_image.url }}"
+                       alt="Profile Picture"
+                       class="rounded-circle comment-img" />
+                  <div class="comment-details ml-2">
+                    <p class="mb-1">
+                      <strong>{{ comment.user.username }}</strong> {{ comment.text }}
                     </p>
-                    <div>
-                      <button class="btn btn-light">
-                        <i class="far fa-thumbs-up"></i> Like
-                      </button>
-                      <button class="btn btn-light">
-                        <i class="far fa-comment"></i> Comment
-                      </button>
-                    </div>
+                    <small class="text-muted">{{ comment.created|date:"M d, Y" }}</small>
                   </div>
                 </div>
-                <div class="comments mt-2">
-                  {% for comment in post.comments.all %}
-                    <div class="comment mb-2 d-flex">
-                      <img src="{{ comment.user.profile.profile_image.url }}"
-                           alt="Profile Picture"
-                           class="rounded-circle comment-img" />
-                      <div class="comment-details ml-2">
-                        <p class="mb-1">
-                          <strong>{{ comment.user.username }}</strong> {{ comment.text }}
-                        </p>
-                        <small class="text-muted">{{ comment.created|date:"M d, Y" }}</small>
-                      </div>
-                    </div>
-                  {% endfor %}
-                  <form class="mt-3">
-                    <input type="text" class="form-control" placeholder="Post a comment" />
-                  </form>
-                </div>
-              </div>
-            {% endfor %}
+              {% endfor %}
+              <form class="mt-3">
+                <input type="text" class="form-control" placeholder="Post a comment" />
+              </form>
+            </div>
           </div>
         </div>
         <div class="col-lg-4">
@@ -174,17 +148,6 @@
         </div>
       </div>
     </div>
-    {% if latest_post_list %}
-      <ul>
-        {% for post in latest_post_list %}
-          <li>
-            <a href="{% url 'social:detail' post.id %}">{{ post.text }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    {% else %}
-      <p>No posts are available.</p>
-    {% endif %}
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-light text-muted mt-auto">
       <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
