--- a/socialmedia/templates/pages/home.html
+++ b/socialmedia/templates/pages/home.html
@@ -47,7 +47,7 @@
     <div class="container text-center my-5">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="display-4">Welcome to our App</h1>
+          <h1 class="display-4">Welcome to Social-Network</h1>
           <p class="lead">
             Our app allows people to create, share or exchange information, ideas, and pictures/videos in virtual communities and networks.
           </p>
