--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -99,7 +99,7 @@
               </div>
             </div>
             <div class="comments mt-2">
-              {% for comment in post_detail.comments.all %}
+              {% for comment in comments %}
                 <div class="comment mb-2 d-flex">
                   <img src="{{ comment.user.profile.profile_image.url }}"
                        alt="Profile Picture"
@@ -112,8 +112,10 @@
                   </div>
                 </div>
               {% endfor %}
-              <form class="mt-3">
-                <input type="text" class="form-control" placeholder="Post a comment" />
+              <form method="post" class="mt-3">
+                {% csrf_token %}
+                {{ comment_form.as_p }}
+                <button type="submit" class="btn btn-primary">Post Comment</button>
               </form>
             </div>
           </div>
