--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -85,6 +85,11 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="profile-content bg-white p-4 rounded shadow-sm">
+            <form method="post" enctype="multipart/form-data">
+              {% csrf_token %}
+              {{ post_form.as_p }}
+              <button type="submit" class="btn btn-primary">Create Post</button>
+            </form>
             <div class="post mb-4">
               <img src="{% static 'images/profile-placeholder.png' %}"
                    alt="Profile Picture"
@@ -95,8 +100,8 @@
                 <button class="btn btn-primary mt-3">Follow</button>
               </div>
             </div>
-            <!-- Displaying user's posts -->
-            {% for post in latest_post_list %}
+            <!-- Displaying user's posts with recent comments -->
+            {% for post, comments in posts_with_comments %}
               <div class="post mt-4 p-3 bg-light rounded">
                 <div class="d-flex">
                   {% if post.image %}
@@ -122,24 +127,19 @@
                   </div>
                 </div>
                 <div id="comments-{{ post.id }}" class="comments mt-2">
-                  {% with comments=post.comments.all|slice:":2" %}
-                    {% for comment in comments %}
-                      <div class="comment mb-2 d-flex">
-                        <img src="{{ comment.user.profile.profile_image.url }}"
-                             alt="Profile Picture"
-                             class="rounded-circle comment-img" />
-                        <div class="comment-details ml-2">
-                          <p class="mb-1">
-                            <strong>{{ comment.user.username }}</strong> {{ comment.text }}
-                          </p>
-                          <small class="text-muted">{{ comment.created|date:"M d, Y" }}</small>
-                        </div>
+                  {% for comment in comments %}
+                    <div class="comment mb-2 d-flex">
+                      <img src="{{ comment.user.profile.profile_image.url }}"
+                           alt="Profile Picture"
+                           class="rounded-circle comment-img" />
+                      <div class="comment-details ml-2">
+                        <p class="mb-1">
+                          <strong>{{ comment.user.username }}</strong> {{ comment.text }}
+                        </p>
+                        <small class="text-muted">{{ comment.created|date:"M d, Y" }}</small>
                       </div>
-                    {% endfor %}
-                  {% endwith %}
-                  <form class="mt-3">
-                    <input type="text" class="form-control" placeholder="Post a comment" />
-                  </form>
+                    </div>
+                  {% endfor %}
                 </div>
               </div>
             {% endfor %}
