--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -49,10 +49,7 @@
         </form>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <button class="btn btn-primary my-2 my-sm-0" type="button">Upload Pics / Videos</button>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-bell"></i></a>
+            <button id="uploadBtn" class="btn btn-primary my-2 my-sm-0" type="button">Upload Pics / Videos</button>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"><i class="fas fa-comments"></i></a>
@@ -85,7 +82,10 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="profile-content bg-white p-4 rounded shadow-sm">
-            <form method="post" enctype="multipart/form-data">
+            <form id="postForm"
+                  method="post"
+                  enctype="multipart/form-data"
+                  class="hidden">
               {% csrf_token %}
               {{ post_form.as_p }}
               <button type="submit" class="btn btn-primary">Create Post</button>
@@ -100,7 +100,6 @@
                 <button class="btn btn-primary mt-3">Follow</button>
               </div>
             </div>
-            <!-- Displaying user's posts with recent comments -->
             {% for post, comments in posts_with_comments %}
               <div class="post mt-4 p-3 bg-light rounded">
                 <div class="d-flex">
@@ -110,6 +109,12 @@
                            alt="Post Image"
                            class="img-fluid mr-3 post-img" />
                     </a>
+                  {% endif %}
+                  {% if post.video %}
+                    <video controls class="img-fluid mr-3 post-video">
+                      <source src="{{ post.video.url }}" type="video/mp4" />
+                      Your browser does not support the video tag.
+                    </video>
                   {% endif %}
                   <div class="details">
                     <p>
@@ -175,100 +180,6 @@
         </div>
       </div>
     </div>
-    <!-- Hide the bottom posts list -->
-    <div class="hidden">
-      {% if latest_post_list %}
-        <ul>
-          {% for post in latest_post_list %}
-            <li>
-              <a href="{% url 'social:detail' post.id %}">{{ post.text }}</a>
-            </li>
-          {% endfor %}
-        </ul>
-      {% else %}
-        <p>No posts are available.</p>
-      {% endif %}
-    </div>
-    <!-- Footer -->
-    <footer class="text-center text-lg-start bg-light text-muted mt-auto">
-      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-        <div class="me-5 d-none d-lg-block">
-          <span>Get connected with us on social networks:</span>
-        </div>
-        <div>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-google"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-      </section>
-      <section>
-        <div class="container text-center text-md-start mt-5">
-          <div class="row mt-3">
-            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">SocialMediaApp</h6>
-              <p>
-                Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </p>
-            </div>
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">Company</h6>
-              <p>
-                <a href="#!" class="text-reset">How it works</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Pricing</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Docs</a>
-              </p>
-            </div>
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">Resources</h6>
-              <p>
-                <a href="#!" class="text-reset">Blog post name list goes here</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Blog post name list goes here</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Blog post name list goes here</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">See all resources ></a>
-              </p>
-            </div>
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">About</h6>
-              <p>
-                <a href="#!" class="text-reset">Terms & Conditions</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Privacy policy</a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <div class="text-center p-4 footer-bg">
-        © 2020 Copyright:
-        <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-      </div>
-    </footer>
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -281,9 +192,8 @@
             crossorigin="anonymous"></script>
     <script>
       $(document).ready(function() {
-        $('.dropdown-toggle-icon').click(function(event) {
-          event.preventDefault();
-          $(this).parent().next('.dropdown-menu').toggle();
+        $('#uploadBtn').click(function() {
+          $('#postForm').toggle();
         });
       });
     </script>
