--- a/socialmedia/static/css/profile.css
+++ b/socialmedia/static/css/profile.css
@@ -1,3 +1,4 @@
+/* profile.css */
 body {
     background-color: white;
 }
@@ -58,6 +59,11 @@ body {
 
 #postForm {
     display: none;
+    text-align: center;
+}
+
+#postForm .form-group {
+    margin-bottom: 15px;
 }
 
 .comment-form {
@@ -83,4 +89,17 @@ body {
     width: 40px;
     height: 40px;
     object-fit: cover;
+}
+
+.custom-alert {
+    display: none;
+    position: fixed;
+    top: 50px;
+    right: 20px;
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 20px;
+    border: 1px solid #f5c6cb;
+    border-radius: 4px;
+    z-index: 1000;
 }
