--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -17,6 +17,21 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" />
     <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
+    <style>
+      .post-content {
+        background-color: #ffffff;
+        border: 1px solid #080808;
+      }
+
+      .post-content .details {
+        padding: 15px;
+      }
+
+      .post-content .comment-form {
+        border-top: 1px solid #607183;
+        padding-top: 15px;
+      }
+    </style>
     <title>Post Detail - Social Media App</title>
   </head>
   <body>
@@ -151,9 +166,9 @@
                   </div>
                 </div>
               {% endfor %}
-              <form method="post" class="mt-3">
+              <form method="post" class="mt-3 comment-form">
                 {% csrf_token %}
-                <div class="d-flex comment-form">
+                <div class="d-flex">
                   <input type="text"
                          name="text"
                          class="form-control"
@@ -166,14 +181,30 @@
         </div>
       </div>
     </div>
+    <div id="customAlert" class="custom-alert">
+      <span id="alertMessage"></span>
+      <button onclick="document.getElementById('customAlert').style.display='none'">OK</button>
+    </div>
     <!-- Optional JavaScript -->
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
+    <script src="{% static 'js/project.js' %}"></script>
     <script>
-      $(document).ready(function() {
-        $('.dropdown-toggle-icon').click(function(event) {
-          event.preventDefault();
-          $(this).parent().next('.dropdown-menu').toggle();
+      document.addEventListener("DOMContentLoaded", function() {
+        function showAlert(message) {
+          var alertBox = document.getElementById("customAlert");
+          var alertMessage = document.getElementById("alertMessage");
+          alertMessage.textContent = message;
+          alertBox.style.display = "block";
+        }
+
+        var commentForm = document.querySelector(".comment-form");
+        commentForm.addEventListener("submit", function(event) {
+          var textField = commentForm.querySelector("input[name='text']");
+          if (!textField.value.trim()) {
+            event.preventDefault();
+            showAlert("You need to insert a comment");
+          }
         });
       });
     </script>
