--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -1,4 +1,4 @@
-{% load static i18n cms_tags sekizai_tags %}
+{% load static i18n cms_tags sekizai_tags youtube %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -128,6 +128,11 @@
                   {{ post_form.video }}
                   {% if post_form.video.errors %}<div class="text-danger">{{ post_form.video.errors }}</div>{% endif %}
                 </div>
+                <div class="form-group">
+                  <label for="youtubeLink">YouTube Link</label>
+                  {{ post_form.youtube_link }}
+                  {% if post_form.youtube_link.errors %}<div class="text-danger">{{ post_form.youtube_link.errors }}</div>{% endif %}
+                </div>
                 <button type="submit" class="btn btn-primary">Create Post</button>
               </form>
               {% for post, comments in posts_with_comments %}
@@ -150,6 +155,13 @@
                         <source src="{{ post.video.url }}" type="video/mp4" />
                         Your browser does not support the video tag.
                       </video>
+                    {% endif %}
+                    {% if post.youtube_link %}
+                      <iframe width="560"
+                              height="315"
+                              src="https://www.youtube.com/embed/{{ post.youtube_link|youtube_id }}"
+                              frameborder="0"
+                              allowfullscreen></iframe>
                     {% endif %}
                     <p class="mt-3">{{ post.text }}</p>
                     <div class="d-flex justify-content-between mt-2">
