--- a/socialmedia/templates/pages/my_profile.html
+++ b/socialmedia/templates/pages/my_profile.html
@@ -30,8 +30,8 @@
         </div>
         <div class="profile-stats">
           <span>{{ posts.count }} Posts</span>
-          <span>{{ user.profile.followers.count|default_if_none:"0" }} Followers</span>
-          <span>{{ user.profile.following.count|default_if_none:"0" }} Following</span>
+          <span id="followers-count">{{ followers_count }} Followers</span>
+          <span id="following-count">{{ following_count }} Following</span>
         </div>
       </div>
       <div class="profile-actions">
