--- a/socialmedia/static/css/my_profile.css
+++ b/socialmedia/static/css/my_profile.css
@@ -42,8 +42,16 @@ body {
     margin: 10px 0;
 }
 
+.profile-info h2 {
+    margin: 5px 0;
+    font-size: 20px;
+    color: #555;
+}
+
 .profile-info p {
     margin: 5px 0;
+    font-size: 16px;
+    color: #777;
 }
 
 .profile-stats {
